# rpx

./: .dockerignore  Cargo.toml  Dockerfile.release  README.md  clippy.toml  dist-workspace.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml  upload-r2.yml
.release/: release-automation.minor
docker/: rpx.Dockerfile
scripts/: bump-version.sh  check-release-intent.sh  next-release.sh
src/: cache.rs  cli.rs  description.rs  http.rs  lib.rs  lockfile.rs  main.rs  output.rs  project.rs  r.rs  r_version.rs  registry.rs  repo.rs  repository.rs  resolver.rs  sysreqs.rs  ui.rs
tests/: cli.rs  deps.rs  integration.rs  repos.rs  status.rs  sync.rs
tests/common/: mod.rs
tests/docker/: rpx.Dockerfile
wix/: main.wxs
