[package]
name = "rpx"
version = "1.3.1-azure.1"
edition = "2024"
description = "Rust CLI for managing R package project dependencies"
authors = ["Adam Smielewski <adam@scalerail.de>"]
repository = "https://github.com/scalerail-solutions/rpx"
readme = "README.md"
keywords = ["r", "packages", "cli", "dependencies"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "04C600C1-C3D0-42A0-83C0-5A026045FD7A"
path-guid = "7B14F12B-63E8-4305-84D3-2B98AEA6B479"
license = false
eula = false

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
deb822-fast = "0.2.3"
directories = "6.0.0"
flate2 = "1.1.5"
indicatif = "0.18.4"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
miette = { version = "7.6.0", features = ["fancy"] }
pubgrub = "0.3.0"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3.1"
r-description = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.19"
[dev-dependencies]
mockito = "1.7.0"
testcontainers = { version = "0.27.2", features = ["blocking"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
